{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 3485,
  "lineage": "9af1438e-5793-5c7a-c493-8fa400aa83cf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dc5c2f4334008a72",
            "arn": "arn:aws:ec2:eu-north-1:134400125759:elastic-ip/eipalloc-0dc5c2f4334008a72",
            "association_id": "eipassoc-0cc4fda1cab364d4e",
            "domain": "vpc",
            "id": "eipalloc-0dc5c2f4334008a72",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-08720e0b9fd099a0d",
            "private_dns": "ip-10-0-2-225.eu-north-1.compute.internal",
            "private_ip": "10.0.2.225",
            "public_dns": "ec2-13-61-108-218.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.61.108.218",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Name": "mgilles-tp6",
              "Owner": "mgilles"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06503edfc530e9c1d",
            "arn": "arn:aws:ec2:eu-north-1:134400125759:instance/i-09eea772e12ede698",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09eea772e12ede698",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.micro",
            "ipv6_address_count": 0,
            "key_name": "mgilles-tp6-bastion",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08187ab742899f7f2",
            "private_dns": "ip-10-0-1-243.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.243",
            "public_dns": "ec2-16-171-57-80.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.171.57.80",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "mgilles-tp6",
                  "Owner": "mgilles"
                },
                "tags_all": {
                  "Name": "mgilles-tp6",
                  "Owner": "mgilles"
                },
                "throughput": 0,
                "volume_id": "vol-07861c25ece70532d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05adf2effbb43193f",
            "tags": {
              "Name": "mgilles-tp6-bastion-instance"
            },
            "tags_all": {
              "Name": "mgilles-tp6-bastion-instance",
              "Owner": "mgilles"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e1cbfd8f83240150"
            ]
          },
          "dependencies": [
            "aws_key_pair.bastion",
            "aws_security_group.bastion_sg",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06503edfc530e9c1d",
            "arn": "arn:aws:ec2:eu-north-1:134400125759:instance/i-0e0db74392383a3c4",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e0db74392383a3c4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.micro",
            "ipv6_address_count": 0,
            "key_name": "mgilles-tp6-nextcloud",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-062d21ed2204ab664",
            "private_dns": "ip-10-0-4-199.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "mgilles-tp6",
                  "Owner": "mgilles"
                },
                "tags_all": {
                  "Name": "mgilles-tp6",
                  "Owner": "mgilles"
                },
                "throughput": 0,
                "volume_id": "vol-00b3c9d6cfd0ef232",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d94130b997578f06",
            "tags": {
              "Name": "mgilles-tp6",
              "Owner": "mgilles"
            },
            "tags_all": {
              "Name": "mgilles-tp6",
              "Owner": "mgilles"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e17f3993696e3c77"
            ]
          },
          "dependencies": [
            "aws_db_instance.nextcloud_rds",
            "aws_db_subnet_group.rds_db_subnet_group",
            "aws_efs_file_system.nextcloud_efs",
            "aws_key_pair.nextcloud",
            "aws_lb.nextcloud",
            "aws_route53_record.nextcloud",
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.private_app_sg",
            "aws_security_group.rds_sg",
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2",
            "aws_subnet.private_subnet_3",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_route53_zone.training",
            "time_static.oui"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:internet-gateway/igw-0d8787dc555e5a7b1",
            "id": "igw-0d8787dc555e5a7b1",
            "owner_id": "134400125759",
            "tags": {
              "Name": "Internet Gateway"
            },
            "tags_all": {
              "Name": "Internet Gateway",
              "Owner": "mgilles"
            },
            "vpc_id": "vpc-014bdbe7c883e0442"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:loadbalancer/app/mgilles-tp6-alb/d656ca19b3d541f0",
            "arn_suffix": "app/mgilles-tp6-alb/d656ca19b3d541f0",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "mgilles-tp6-alb-1075559294.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:loadbalancer/app/mgilles-tp6-alb/d656ca19b3d541f0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mgilles-tp6-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0fc9730cf15a26d22"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05adf2effbb43193f"
              },
              {
                "subnet_id": "subnet-0f838917063dad3b9"
              }
            ],
            "subnets": [
              "subnet-05adf2effbb43193f",
              "subnet-0f838917063dad3b9"
            ],
            "tags": {
              "Name": "mgilles-tp6",
              "Owner": "mgilles"
            },
            "tags_all": {
              "Name": "mgilles-tp6",
              "Owner": "mgilles"
            },
            "vpc_id": "vpc-014bdbe7c883e0442",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:listener/app/mgilles-tp6-alb/d656ca19b3d541f0/c3fb0aa273d0b49b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:targetgroup/mgilles-tp6-target-group/36cc6e72a2c6ebb1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:listener/app/mgilles-tp6-alb/d656ca19b3d541f0/c3fb0aa273d0b49b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:loadbalancer/app/mgilles-tp6-alb/d656ca19b3d541f0",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Name": "mgilles-tp6",
              "Owner": "mgilles"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nextcloud",
            "aws_lb_target_group.nextcloud",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:targetgroup/mgilles-tp6-target-group/36cc6e72a2c6ebb1",
            "arn_suffix": "targetgroup/mgilles-tp6-target-group/36cc6e72a2c6ebb1",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:targetgroup/mgilles-tp6-target-group/36cc6e72a2c6ebb1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-north-1:134400125759:loadbalancer/app/mgilles-tp6-alb/d656ca19b3d541f0"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mgilles-tp6-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "mgilles-tp6",
              "Owner": "mgilles"
            },
            "tags_all": {
              "Name": "mgilles-tp6",
              "Owner": "mgilles"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-014bdbe7c883e0442"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nextcloud_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:targetgroup/mgilles-tp6-target-group/36cc6e72a2c6ebb1-20241128110719749400000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:targetgroup/mgilles-tp6-target-group/36cc6e72a2c6ebb1",
            "target_id": "i-0e0db74392383a3c4"
          },
          "dependencies": [
            "aws_db_instance.nextcloud_rds",
            "aws_db_subnet_group.rds_db_subnet_group",
            "aws_efs_file_system.nextcloud_efs",
            "aws_instance.nextcloud",
            "aws_key_pair.nextcloud",
            "aws_lb.nextcloud",
            "aws_lb_target_group.nextcloud",
            "aws_route53_record.nextcloud",
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.private_app_sg",
            "aws_security_group.rds_sg",
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2",
            "aws_subnet.private_subnet_3",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_route53_zone.training",
            "time_static.oui"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dc5c2f4334008a72",
            "association_id": "eipassoc-0cc4fda1cab364d4e",
            "connectivity_type": "public",
            "id": "nat-064ab285292b64da5",
            "network_interface_id": "eni-08720e0b9fd099a0d",
            "private_ip": "10.0.2.225",
            "public_ip": "13.61.108.218",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f838917063dad3b9",
            "tags_all": {
              "Name": "mgilles-tp6",
              "Owner": "mgilles"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_subnet_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "bastion_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:network-acl/acl-04448a093b4643690",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 120,
                "to_port": 0
              }
            ],
            "id": "acl-04448a093b4643690",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 130,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "195.7.117.146/32",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "51.44.16.230/32",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 105,
                "to_port": 22
              },
              {
                "action": "deny",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 22
              }
            ],
            "owner_id": "134400125759",
            "subnet_ids": [
              "subnet-05adf2effbb43193f",
              "subnet-08f6c983051ba7ac1",
              "subnet-0f838917063dad3b9"
            ],
            "tags": {
              "Name": "mgilles-tp6-bastion-acl"
            },
            "tags_all": {
              "Name": "mgilles-tp6-bastion-acl",
              "Owner": "mgilles"
            },
            "vpc_id": "vpc-014bdbe7c883e0442"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_subnet.public_subnet_3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "nextcloud_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:network-acl/acl-0a060b0fe3ce6353b",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 120,
                "to_port": 0
              }
            ],
            "id": "acl-0a060b0fe3ce6353b",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 110,
                "to_port": 0
              },
              {
                "action": "deny",
                "cidr_block": "18.206.107.24/29",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 22
              }
            ],
            "owner_id": "134400125759",
            "subnet_ids": [
              "subnet-02b57688f7094033a",
              "subnet-0a869c5631820b202",
              "subnet-0d94130b997578f06"
            ],
            "tags": {
              "Name": "mgilles-tp6-nextcloud-acl"
            },
            "tags_all": {
              "Name": "mgilles-tp6-nextcloud-acl",
              "Owner": "mgilles"
            },
            "vpc_id": "vpc-014bdbe7c883e0442"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2",
            "aws_subnet.private_subnet_3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3373629054",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0a060b0fe3ce6353b",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.nextcloud_acl",
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2",
            "aws_subnet.private_subnet_3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_all_egress1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2972833101",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-04448a093b4643690",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.bastion_acl",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_subnet.public_subnet_3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_all_inboun1d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3366421258",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-04448a093b4643690",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 130,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.bastion_acl",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_subnet.public_subnet_3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_all_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2603898920",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0a060b0fe3ce6353b",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.nextcloud_acl",
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2",
            "aws_subnet.private_subnet_3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_secondary_ip_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "51.44.16.230/32",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2223079252",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-04448a093b4643690",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 105,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.bastion_acl",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_subnet.public_subnet_3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_vpn_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "195.7.117.146/32",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-471992388",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-04448a093b4643690",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.bastion_acl",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_subnet.public_subnet_3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "deny_ssh_from_specific_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "18.206.107.24/29",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2840424240",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0a060b0fe3ce6353b",
            "protocol": "6",
            "rule_action": "deny",
            "rule_number": 100,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.nextcloud_acl",
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2",
            "aws_subnet.private_subnet_3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "deny_ssh_other",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3249852865",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-04448a093b4643690",
            "protocol": "6",
            "rule_action": "deny",
            "rule_number": 110,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.bastion_acl",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_subnet.public_subnet_3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:route-table/rtb-01b28fc9ab029bb53",
            "id": "rtb-01b28fc9ab029bb53",
            "owner_id": "134400125759",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-064ab285292b64da5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table 1"
            },
            "tags_all": {
              "Name": "Private Route Table 1",
              "Owner": "mgilles"
            },
            "timeouts": null,
            "vpc_id": "vpc-014bdbe7c883e0442"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnet_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:route-table/rtb-0357ffab5c6b79886",
            "id": "rtb-0357ffab5c6b79886",
            "owner_id": "134400125759",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-064ab285292b64da5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table 2"
            },
            "tags_all": {
              "Name": "Private Route Table 2",
              "Owner": "mgilles"
            },
            "timeouts": null,
            "vpc_id": "vpc-014bdbe7c883e0442"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnet_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:route-table/rtb-02980a68a51518915",
            "id": "rtb-02980a68a51518915",
            "owner_id": "134400125759",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-064ab285292b64da5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table 3"
            },
            "tags_all": {
              "Name": "Private Route Table 3",
              "Owner": "mgilles"
            },
            "timeouts": null,
            "vpc_id": "vpc-014bdbe7c883e0442"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnet_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:route-table/rtb-057a62b33183d6695",
            "id": "rtb-057a62b33183d6695",
            "owner_id": "134400125759",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d8787dc555e5a7b1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table",
              "Owner": "mgilles"
            },
            "timeouts": null,
            "vpc_id": "vpc-014bdbe7c883e0442"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01389e0b69ed08c5e",
            "route_table_id": "rtb-01b28fc9ab029bb53",
            "subnet_id": "subnet-0d94130b997578f06"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private_1",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af3f1030c40a015b",
            "route_table_id": "rtb-0357ffab5c6b79886",
            "subnet_id": "subnet-02b57688f7094033a"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private_2",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3ab11840beb7b08",
            "route_table_id": "rtb-02980a68a51518915",
            "subnet_id": "subnet-0a869c5631820b202"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private_3",
            "aws_subnet.private_subnet_3",
            "aws_subnet.public_subnet_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e1fdbc398a3fe2c",
            "route_table_id": "rtb-057a62b33183d6695",
            "subnet_id": "subnet-05adf2effbb43193f"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6b886beddacda93",
            "route_table_id": "rtb-057a62b33183d6695",
            "subnet_id": "subnet-0f838917063dad3b9"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_subnet_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e384c5e9bc1651a",
            "route_table_id": "rtb-057a62b33183d6695",
            "subnet_id": "subnet-08f6c983051ba7ac1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_subnet_3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group/sg-0fc9730cf15a26d22",
            "description": "Security group for the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fc9730cf15a26d22",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mgilles-tp6-alb-sg",
            "name_prefix": "",
            "owner_id": "134400125759",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mgilles-tp6",
              "Owner": "mgilles"
            },
            "tags_all": {
              "Name": "mgilles-tp6",
              "Owner": "mgilles"
            },
            "timeouts": null,
            "vpc_id": "vpc-014bdbe7c883e0442"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group/sg-0e1cbfd8f83240150",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e1cbfd8f83240150",
            "ingress": [
              {
                "cidr_blocks": [
                  "195.7.117.146/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "51.44.16.230/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20241128105046655500000001",
            "name_prefix": "terraform-",
            "owner_id": "134400125759",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mgilles-tp6-bastion-sg"
            },
            "tags_all": {
              "Name": "mgilles-tp6-bastion-sg",
              "Owner": "mgilles"
            },
            "timeouts": null,
            "vpc_id": "vpc-014bdbe7c883e0442"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group/sg-0fd97639d37d1b61b",
            "description": "Security group to secure access to EFS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fd97639d37d1b61b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e17f3993696e3c77"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "mgilles-tp6-efs-sg",
            "name_prefix": "",
            "owner_id": "134400125759",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mgilles-tp6-efs-sg"
            },
            "tags_all": {
              "Name": "mgilles-tp6-efs-sg",
              "Owner": "mgilles"
            },
            "timeouts": null,
            "vpc_id": "vpc-014bdbe7c883e0442"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.private_app_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group/sg-0e17f3993696e3c77",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e17f3993696e3c77",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "195.7.117.146/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e1cbfd8f83240150"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fc9730cf15a26d22"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241128105049435900000004",
            "name_prefix": "terraform-",
            "owner_id": "134400125759",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mgilles-tp6-private-app-sg"
            },
            "tags_all": {
              "Name": "mgilles-tp6-private-app-sg",
              "Owner": "mgilles"
            },
            "timeouts": null,
            "vpc_id": "vpc-014bdbe7c883e0442"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group/sg-080d390137c23f298",
            "description": "Security group for RDS MySQL instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-080d390137c23f298",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e17f3993696e3c77"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "mgilles-tp6-rds-sg",
            "name_prefix": "",
            "owner_id": "134400125759",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mgilles-tp6-rds-sg"
            },
            "tags_all": {
              "Name": "mgilles-tp6-rds-sg",
              "Owner": "mgilles"
            },
            "timeouts": null,
            "vpc_id": "vpc-014bdbe7c883e0442"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.private_app_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-0d94130b997578f06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d94130b997578f06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mgilles-tp6-private-subnet-1"
            },
            "tags_all": {
              "Name": "mgilles-tp6-private-subnet-1",
              "Owner": "mgilles"
            },
            "vpc_id": "vpc-014bdbe7c883e0442"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-02b57688f7094033a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b57688f7094033a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mgilles-tp6-private-subnet-2"
            },
            "tags_all": {
              "Name": "mgilles-tp6-private-subnet-2",
              "Owner": "mgilles"
            },
            "vpc_id": "vpc-014bdbe7c883e0442"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-0a869c5631820b202",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a869c5631820b202",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mgilles-tp6-private-subnet-3"
            },
            "tags_all": {
              "Name": "mgilles-tp6-private-subnet-3",
              "Owner": "mgilles"
            },
            "vpc_id": "vpc-014bdbe7c883e0442"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-05adf2effbb43193f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05adf2effbb43193f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mgilles-tp6-public-subnet-1"
            },
            "tags_all": {
              "Name": "mgilles-tp6-public-subnet-1",
              "Owner": "mgilles"
            },
            "vpc_id": "vpc-014bdbe7c883e0442"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-0f838917063dad3b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f838917063dad3b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mgilles-tp6-public-subnet-2"
            },
            "tags_all": {
              "Name": "mgilles-tp6-public-subnet-2",
              "Owner": "mgilles"
            },
            "vpc_id": "vpc-014bdbe7c883e0442"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-08f6c983051ba7ac1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f6c983051ba7ac1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mgilles-tp6-public-subnet-3"
            },
            "tags_all": {
              "Name": "mgilles-tp6-public-subnet-3",
              "Owner": "mgilles"
            },
            "vpc_id": "vpc-014bdbe7c883e0442"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:vpc/vpc-014bdbe7c883e0442",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a80f3104a8f9c0f9",
            "default_route_table_id": "rtb-01d2ba6a36ae043de",
            "default_security_group_id": "sg-0abd69c1b0a2a458b",
            "dhcp_options_id": "dopt-84fa2ded",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-014bdbe7c883e0442",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01d2ba6a36ae043de",
            "owner_id": "134400125759",
            "tags": {
              "Name": "Main VPC"
            },
            "tags_all": {
              "Name": "Main VPC",
              "Owner": "mgilles"
            }
          }
        }
      ]
    }
  ]
}